--- a/styles/frames.css
+++ b/styles/frames.css
@@ -4,7 +4,7 @@
 * {
   margin: 0;
   padding: 0;
-  font-family: "Poppins", sans-serif;
+  font-family: "Josefin Sans";
 }
 
 html {
@@ -126,11 +126,12 @@ main {
   display: flex;
   flex-direction: column;
   gap: 1rem;
+  font-size: large;
 }
 
 .intro-text button {
   width: fit-content;
-  padding: 0.4rem 1rem;
+  padding: 0.6rem 1rem;
   background: hsl(219, 100%, 64%);
   color: white;
   box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
@@ -140,6 +141,7 @@ main {
   border-radius: 3px;
   transition: 0.2s;
   -webkit-tap-highlight-color: transparent;
+  font-size: 15px;
 }
 
 .intro-text button:hover {
@@ -154,7 +156,7 @@ main {
 }
 
 .now-playing {
-  position: fixed;
+  position: absolute;
   bottom: 20px;
   left: 20px;
   padding: 6px 10px;
