--- a/styles/frames.css
+++ b/styles/frames.css
@@ -21,6 +21,7 @@ body {
   flex-direction: column;
   max-width: 100vw;
   overflow-x: hidden;
+  background: #101010;
 }
 
 .header {
@@ -39,7 +40,7 @@ h1 {
 
 h1 span {
   font-weight: 200;
-  color: black;
+  color: white;
 }
 
 main {
@@ -126,6 +127,7 @@ main {
   display: flex;
   flex-direction: column;
   gap: 1rem;
+  color: white;
 }
 
 .intro-text button {
@@ -138,12 +140,12 @@ main {
   outline: none;
   cursor: pointer;
   border-radius: 3px;
-  transition: 0.2s;
+  transition: 0.1s;
   -webkit-tap-highlight-color: transparent;
 }
 
 .intro-text button:hover {
-  background: hsl(219, 100%, 64%);
+  background: hsla(219, 100%, 64%, 0.5);
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
 
@@ -154,7 +156,7 @@ main {
 }
 
 .now-playing {
-  position: absolute;
+  position: fixed;
   bottom: 20px;
   left: 20px;
   padding: 6px 10px;
