--- a/styles/index.css
+++ b/styles/index.css
@@ -38,6 +38,10 @@ body {
   animation: fade 1s linear;
 }
 
+.hidden {
+  display: none;
+}
+
 .x-sm {
   font-size: 12px;
 }
@@ -164,6 +168,10 @@ section .row {
 }
 
 @media (max-width: 450px) {
+  .hidden {
+    display: block;
+  }
+  
   .container {
     gap: 1.4rem;
   }
