--- a/styles/frames.css
+++ b/styles/frames.css
@@ -21,7 +21,7 @@ body {
   flex-direction: column;
   max-width: 100vw;
   overflow-x: hidden;
-  background: #050505;
+  /* background: #050505; */
 }
 
 .header {
@@ -40,7 +40,7 @@ h1 {
 
 h1 span {
   font-weight: 200;
-  color: white;
+  color: #050505;
 }
 
 main {
@@ -91,6 +91,7 @@ main {
 
 .image-container img {
   width: 100%;
+  max-width: 400px;
   height: 100%;
   object-fit: cover;
   border-radius: 8px;
@@ -127,7 +128,7 @@ main {
   display: flex;
   flex-direction: column;
   gap: 1rem;
-  color: white;
+  color: #050505;
 }
 
 .intro-text button {
@@ -145,7 +146,7 @@ main {
 }
 
 .intro-text button:hover {
-  background: hsla(219, 100%, 64%, 0.5);
+  background: rgb(41, 114, 249);
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
 
@@ -221,4 +222,49 @@ main {
   h1 {
     font-size: 20px;
   }
+}
+
+
+#preloader {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: #fff;
+  z-index: 9999;
+}
+
+#preloader:before {
+  content: "";
+  position: absolute;
+  /* Centering the pseudo-element */
+  top: 50%;
+  left: 50%;
+  margin-top: -25px; /* Half of the element's height */
+  margin-left: -25px; /* Half of the element's width */
+  width: 50px;
+  height: 50px;
+  border: 4px solid #f3f3f3;
+  border-top: 4px solid hsl(219, 100%, 60%);
+  border-radius: 50%;
+  animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+.fade-out {
+  opacity: 0;
+  transition: opacity 0.4s ease-out;
+}
+
+.hidden {
+  display: none;
 }
